# cmfmt

./: Cargo.toml  README.md  cmfmt.toml  mcfmt.toml
.github/workflows/: Release.yml  Rust.yml
src/: fmt.rs  main.rs  settings.rs  utils.rs
test/: fmt_res.rs  raw_markdown.md  raw_markdown_format.md  raw_markdown_overwirte.md
