[package]
name = "cmfmt"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pulldown-cmark = "0.8"
pulldown-cmark-to-cmark = "6.0"
tempfile = "3.2"
toml = "0.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
maplit = "*"
